<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_last_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_descr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_descr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/hint_descr"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/text_submit" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioGroup
                    android:id="@+id/radio1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checkedButton="@+id/rb1">

                    <RadioButton
                        android:id="@+id/rb1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="1" />

                    <RadioButton
                        android:id="@+id/rb2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="2" />

                    <RadioButton

                        android:id="@+id/rb3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="3" />

                    <RadioButton
                        android:id="@+id/rb4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="4" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/radio2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checkedButton="@+id/rb5">

                    <RadioButton
                        android:id="@+id/rb5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="5" />

                    <RadioButton
                        android:id="@+id/rb6"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="6" />

                    <RadioButton
                        android:id="@+id/rb7"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="7" />

                    <RadioButton
                        android:id="@+id/rb8"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="8" />
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/calculate_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/text_calculate" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Result:"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="18sp" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>
